v0.11.0/_sources/gallery/histograms/histogram.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/histograms/histogram.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_histograms_histogram.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_histograms_histogram.py:


Histogram
=========

The :meth:`pygmt.Figure.histogram` method can plot regular histograms.
Using the ``series`` parameter allows to set the interval for the width of
each bar. The type of the histogram (frequency count or percentage) can be
selected via the ``histtype`` parameter.

.. GENERATED FROM PYTHON SOURCE LINES 12-40



.. image-sg:: /gallery/histograms/images/sphx_glr_histogram_001.png
   :alt: histogram
   :srcset: /gallery/histograms/images/sphx_glr_histogram_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import numpy as np
    import pygmt

    # Generate random elevation data from a normal distribution
    rng = np.random.default_rng(seed=100)
    mean = 100  # mean of distribution
    stddev = 25  # standard deviation of distribution
    data = rng.normal(loc=mean, scale=stddev, size=521)


    fig = pygmt.Figure()

    fig.histogram(
        data=data,
        # Define the frame, add a title, and set the background color to
        # "lightgray". Add labels to the x-axis and y-axis
        frame=["WSne+tHistogram+glightgray", "x+lElevation (m)", "y+lCounts"],
        # Generate evenly spaced bins by increments of 5
        series=5,
        # Use "red3" as color fill for the bars
        fill="red3",
        # Use the pen parameter to draw the outlines with a width of 1 point
        pen="1p",
        # Choose histogram type 0, i.e., counts [Default]
        histtype=0,
    )

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.216 seconds)


.. _sphx_glr_download_gallery_histograms_histogram.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: histogram.ipynb <histogram.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: histogram.py <histogram.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
